<resources>
    <string name="app_name" translatable="false">AcquaAndroid</string>
    <string name="friend">Friend</string>
    <string name="group">Group</string>
    <string name="calendar">Calendar</string>
    <string name="feed">Feed</string>
    <string name="notice">Notice</string>
    <string name="name">Name</string>
    <string name="full_name">%1$s\u0020%2$s</string> <!--first_name, last_name-->
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="contact">Contact</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>
    <string name="genbir">%1$s / %2$s</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="profile">Profile</string>
    <string name="my_profile">My Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
