<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_friend"
        android:enabled="true"
        android:title="@string/friend"
        android:icon="@drawable/ic_friend"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_group"
        android:enabled="true"
        android:title="@string/group"
        android:icon="@drawable/ic_group"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_calendar"
        android:enabled="true"
        android:title="@string/calendar"
        android:icon="@drawable/ic_calendar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_feed"
        android:enabled="true"
        android:title="@string/feed"
        android:icon="@drawable/ic_feed"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_notice"
        android:enabled="true"
        android:title="@string/notice"
        android:icon="@drawable/ic_notice"
        app:showAsAction="ifRoom" />
</menu>