<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.friendsList.FriendProfileActivity">

    <data>

        <variable
            name="viewModel"
            type="com.jinoolee.acquaandroid.view.friendsList.viewModel.ProfileViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/friend_profile_group_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    >

                    <TextView
                        android:id="@+id/friend_profile_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:text="@{@string/full_name(viewModel.profile.completeProfile.firstName, viewModel.profile.completeProfile.lastName)}"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/label_h2"/>

                    <TextView
                        android:id="@+id/friend_profile_genbir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@{@string/genbir((viewModel.profile.completeProfile.gender.equals(`male`)) ? @string/male : @string/female, viewModel.profile.completeProfile.birthday)}"
                        android:textColor="@color/colorMainGray"
                        android:textSize="@dimen/label_h4"
                        />

                    <View
                        android:id="@+id/friend_profile_divider1"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="16dp"
                        android:background="?android:attr/listDivider" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/friend_profile_group_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/friend_profile_group_name"
                    >
                    <TextView
                        android:id="@+id/friend_profile_contact_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/contact"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/label_h3" />

                    <TextView
                        android:id="@+id/friend_profile_email_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/email"
                        android:textColor="@color/colorLightGray"
                        android:textSize="@dimen/label_h4"/>

                    <TextView
                        android:id="@+id/friend_profile_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:text="@{viewModel.profile.completeProfile.email}"
                        android:textColor="@color/colorMainGray"/>

                    <TextView
                        android:id="@+id/friend_profile_phone_number_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/phone_number"
                        android:textColor="@color/colorLightGray"
                        android:textSize="@dimen/label_h4"/>

                    <TextView
                        android:id="@+id/friend_profile_phone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:text="@{viewModel.profile.completeProfile.phoneNumber}"
                        android:textColor="@color/colorMainGray"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/friend_profile_phone_number_label" />

                    <View
                        android:id="@+id/friend_profile_divider2"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="16dp"
                        android:background="?android:attr/listDivider"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/friend_profile_phone_number" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/friend_profile_group_contact"
                    >

                    <TextView
                        android:id="@+id/friend_profile_genbir_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/contact"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/label_h3" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="TextView"/>

                </LinearLayout>




            </android.support.constraint.ConstraintLayout>
        </ScrollView>


    </android.support.constraint.ConstraintLayout>
</layout>